[package]
name = "machine_learning_basics"
version = "0.1.0"
authors = ["torstein <t.soernes@gmail.com>"]

[dependencies]
csv = "1.0.0"
serde = "1.0.70"
structopt = "0.2.10"
num-traits = "0.2.5"
clap = "2.32.0"
quickersort = "3.0.1"
ndarray = "0.12.1"
ndarray-rand = "0.9.0"
rand = "0.6.5"
rand_chacha = "0.1.1"
